style(pokemon_details): fixed image too big for legendaries

--- a/client/src/styles/ui.scss
+++ b/client/src/styles/ui.scss
@@ -423,7 +423,7 @@ figure.pkmn-det__figure {
 img.pkmn-det__image {
   width: 1em;
   height: 1em;
-  font-size: 30rem;
+  font-size: 24rem;
   margin: 0 auto;
   margin-bottom: -2rem;
   margin-top: -2rem;
